After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749530 - xvimagesink: fix pool leak
xvimagesink: fix pool leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-05-18 07:16 UTC by Vineeth
Modified: 2015-05-18 07:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix pool leak (789 bytes, patch)
2015-05-18 07:16 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-05-18 07:16:03 UTC
During set caps when config fails, the referenced newpool
 is not unref ed.

 hence unreffing the same in config_fail
Comment 1 Vineeth 2015-05-18 07:16:43 UTC
Created attachment 303505 [details] [review]
fix pool leak
Comment 2 Sebastian Dröge (slomo) 2015-05-18 07:41:54 UTC
commit b1bc2af76636dc6db7577232ad68ae08ef007db1
Author: Vineeth T M <vineeth.tm@samsung.com>
Date:   Mon May 18 16:16:10 2015 +0900

    xvimagesink: fix pool leak
    
    During set caps when config fails, the referenced newpool
    is not unref ed.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=749530