xvimagesink: fix pool leak

During set caps when config fails, the referenced newpool
is not unref ed.

https://bugzilla.gnome.org/show_bug.cgi?id=749530